a1/brendan_gordon/TEST_PROGRAMS/invalidtype/xiru_zhu/invalid3.min
var test: float;
var test1: string;

test1 = test1 +- test1; #valid
test1 = test;
